ansible/roles/manage-k3s-homelab-cluster/files/cert-manager/network-policies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cert-manager-egress
  namespace: cert-manager
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: cert-manager
  egress:
  - toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
        - matchPattern: "*"
  - toCIDR: ["0.0.0.0/0"]
    ipFamilies: [IPv4]
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
  - toCIDR: ["10.43.0.0/16"]
    ipFamilies: [IPv4]
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP        
  - toEntities:
    - kube-apiserver
    toPorts:
    - ports:
      - port: "6443"
        protocol: TCP     

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ovh-webhook-egress
  namespace: cert-manager
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cert-manager-webhook-ovh
  egress:
  - toCIDR: ["0.0.0.0/0"]
  - toEntities:
    - kube-apiserver
    toPorts:
    - ports:
      - port: "6443"
        protocol: TCP 
  - toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
        - matchPattern: "*"
